# CANopenNode

./: .gitignore
example/: DS301_profile.eds  DS301_profile.json  DS301_profile.xpd
rust/: Cargo.toml  README.md
rust/canopen-core/: Cargo.toml
rust/canopen-core/src/: cob.rs  frame.rs  heartbeat.rs  lib.rs  nmt.rs  node.rs  node_id.rs  od.rs  pdo.rs
rust/canopen-core/src/sdo/: abort.rs  client.rs  mod.rs  server.rs
rust/canopen-core/tests/: sdo_segmented_e2e.rs
rust/canopen-demo/: Cargo.toml
rust/canopen-demo/src/: main.rs
rust/canopen-embassy/: Cargo.toml
rust/canopen-embassy/src/: lib.rs
rust/canopen-example-od/: Cargo.toml  build.rs
rust/canopen-example-od/src/: lib.rs
rust/canopen-example-od/tests/: demo_loop_sim.rs  od.rs  pdo.rs  sdo_end_to_end.rs
rust/canopen-od-codegen/: Cargo.toml
rust/canopen-od-codegen/src/: gen.rs  lib.rs  main.rs  model.rs
rust/canopen-od-codegen/tests/: generate.rs
rust/canopen-socketcan/: Cargo.toml
rust/canopen-socketcan/src/: async_bus.rs  lib.rs
